fix css overflow

--- a/instagram/static/instagram/src/post/Post.css
+++ b/instagram/static/instagram/src/post/Post.css
@@ -66,7 +66,7 @@
   justify-content: space-between;
   width: 100%;
   max-height: 100%;
-  overflow: scroll;
+  overflow: auto;
   overflow-wrap: break-word;
 }
 
